# OpenGov-Pensions

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  TEST_COVERAGE_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20250920120000_initial_models.py
docs/: GAP_ANALYSIS.md
docs/adr/: 0001-architecture-style.md
docs/architecture/: overview.md
infrastructure/helm/opengovpension/: Chart.yaml  values.yaml
infrastructure/helm/opengovpension/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  rbac.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml
src/opengovpension/: __init__.py  cli.py
src/opengovpension/api/v1/: apikeys.py  auth.py  deps.py  items.py
src/opengovpension/core/: celery_app.py  config.py  database.py  exceptions.py  state_config.py
src/opengovpension/db/: base.py  mixins.py  session.py
src/opengovpension/models/: domain.py  item.py  orm.py  state_models.py
src/opengovpension/repositories/: __init__.py  apikey_repository.py  base.py  item_repository.py  role_repository.py  token_repository.py  user_repository.py
src/opengovpension/security/: audit.py  auth.py  middleware.py
src/opengovpension/services/: agent_service.py  ollama_service.py  state_service.py
src/opengovpension/storage/: item_storage.py
src/opengovpension/tui/: __init__.py  app.py  config.py  menus.py
src/opengovpension/utils/: audit.py  cache.py  circuit_breaker.py  health.py  observability.py  tracing.py
src/opengovpension/web/: app.py
tests/: test_api.py  test_comprehensive.py  test_core.py  test_state_functionality.py
tests/unit/: test_auth.py  test_refresh_flow.py  test_roles_api_key.py  test_user_repository.py
